[gd_scene load_steps=12 format=3 uid="uid://c7h2m4lap1x3y"]

[ext_resource type="Script" uid="uid://d1h2o3m4e5g6d" path="res://scenes/home.gd" id="1_home"]

[sub_resource type="Gradient" id="Gradient_sky"]
colors = PackedColorArray(0.529, 0.808, 0.922, 1, 0.89, 0.949, 0.992, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sky"]
gradient = SubResource("Gradient_sky")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_logo"]
bg_color = Color(1, 0.835, 0.31, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 8
shadow_offset = Vector2(2, 4)
content_margin_left = 24.0
content_margin_top = 16.0
content_margin_right = 24.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_subject_btn"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5
content_margin_left = 20.0
content_margin_top = 16.0
content_margin_right = 20.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_subject_hover"]
bg_color = Color(1, 0.976, 0.769, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5
content_margin_left = 20.0
content_margin_top = 16.0
content_margin_right = 20.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_subject_pressed"]
bg_color = Color(1, 0.878, 0.698, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 3
content_margin_left = 20.0
content_margin_top = 16.0
content_margin_right = 20.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_subject_disabled"]
bg_color = Color(0.85, 0.85, 0.85, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
content_margin_left = 20.0
content_margin_top = 16.0
content_margin_right = 20.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lang_btn"]
bg_color = Color(1, 1, 1, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lang_selected"]
bg_color = Color(1, 0.835, 0.31, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_home")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_sky")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="LangToggle" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="EnBtn" type="Button" parent="VBoxContainer/LangToggle"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_hover_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_pressed_color = Color(0.176, 0.204, 0.212, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_lang_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_lang_btn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lang_btn")
text = "EN"

[node name="KoBtn" type="Button" parent="VBoxContainer/LangToggle"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_hover_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_pressed_color = Color(0.176, 0.204, 0.212, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_lang_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_lang_btn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lang_btn")
text = "KO"

[node name="LogoContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Logo" type="Label" parent="VBoxContainer/LogoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176, 0.204, 0.212, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_logo")
text = "TITLE_SMART_DROP"
auto_translate_mode = 1

[node name="SubjectButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MathButton" type="Button" parent="VBoxContainer/SubjectButtons"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_hover_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_pressed_color = Color(0.176, 0.204, 0.212, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_subject_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_subject_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_subject_pressed")
text = "SUBJECT_MATH"
auto_translate_mode = 1

[node name="BestScore" type="Label" parent="VBoxContainer/SubjectButtons/MathButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -12.0
offset_right = 120.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.4, 0.733, 0.416, 1)
theme_override_font_sizes/font_size = 16
text = "Best: 0"

[node name="ChineseButton" type="Button" parent="VBoxContainer/SubjectButtons"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
theme_override_colors/font_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_subject_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_subject_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_subject_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_subject_disabled")
text = "SUBJECT_CHINESE"
auto_translate_mode = 1

[node name="BestScore" type="Label" parent="VBoxContainer/SubjectButtons/ChineseButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -12.0
offset_right = 120.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Best: 0"

[node name="EnglishButton" type="Button" parent="VBoxContainer/SubjectButtons"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
theme_override_colors/font_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_subject_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_subject_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_subject_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_subject_disabled")
text = "SUBJECT_ENGLISH"
auto_translate_mode = 1

[node name="BestScore" type="Label" parent="VBoxContainer/SubjectButtons/EnglishButton"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -12.0
offset_right = 120.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Best: 0"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.937, 0.325, 0.314, 1)
theme_override_colors/font_hover_color = Color(0.937, 0.325, 0.314, 1)
theme_override_colors/font_pressed_color = Color(0.937, 0.325, 0.314, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_subject_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_subject_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_subject_pressed")
text = "BTN_EXIT"
auto_translate_mode = 1

[connection signal="pressed" from="VBoxContainer/LangToggle/EnBtn" to="." method="_on_en_pressed"]
[connection signal="pressed" from="VBoxContainer/LangToggle/KoBtn" to="." method="_on_ko_pressed"]
[connection signal="pressed" from="VBoxContainer/SubjectButtons/MathButton" to="." method="_on_math_pressed"]
[connection signal="pressed" from="VBoxContainer/SubjectButtons/ChineseButton" to="." method="_on_chinese_pressed"]
[connection signal="pressed" from="VBoxContainer/SubjectButtons/EnglishButton" to="." method="_on_english_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_pressed"]
